# api-contract/src/main/resources/api-contract.yaml
@@ -28,11 +28,12 @@ paths:
             text/html:
               schema:
                 type: string
+          x-default-response: true
   /index:
     get:
       summary: Get the index page
       description: Get the index page
-      operationId: renderIndexPage
+      operationId: renderIndexPageIndex
       tags:
         - index
       responses:
@@ -42,6 +43,23 @@ paths:
             text/html:
               schema:
                 type: string
+          x-default-response: true
+  /index.html:
+    get:
+      summary: Get the index page
+      description: Get the index page
+      operationId: renderIndexPageFromIndexHtml
+      tags:
+        - index
+      responses:
+        '200':
+          description: Successful response
+          content:
+            text/html:
+              schema:
+                type: string
+          x-default-response: true
+
   /{languageShortName}/api/admin/gov-representatives:
     post:
       tags:
